ajout de la possibilite de mettre une image et qu'il nous dise l'emotion

--- a/emotion-detector.ipynb
+++ b/emotion-detector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
@@ -27,19 +27,23 @@
     "import cv2\n",
     "from tensorflow.keras.applications import VGG16, InceptionResNetV2\n",
     "from keras import regularizers\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.preprocessing import image\n",
     "from tensorflow.keras.optimizers import Adam,RMSprop,SGD,Adamax"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "trusted": true
    },
    "outputs": [],
    "source": [
-    "train_dir = \"../archive/train\" #passing the path with training images\n",
-    "test_dir = \"../archive/test\"   #passing the path with testing images"
+    "train_dir = \"../dataset/train\" #passing the path with training images\n",
+    "test_dir = \"../dataset/test\"   #passing the path with testing images"
    ]
   },
   {
@@ -664,7 +668,55 @@
     "trusted": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "# Charger le modèle entraîné\n",
+    "# (si ton modèle est déjà en mémoire, tu peux sauter cette ligne)\n",
+    "model = load_model(\"model_optimal.h5\")\n",
+    "\n",
+    "# Dictionnaire des classes (même ordre que pendant l'entraînement)\n",
+    "label_dict = {\n",
+    "    0: 'Angry',\n",
+    "    1: 'Disgust',\n",
+    "    2: 'Fear',\n",
+    "    3: 'Happy',\n",
+    "    4: 'Neutral',\n",
+    "    5: 'Sad',\n",
+    "    6: 'Surprise'\n",
+    "}\n",
+    "\n",
+    "# Prétraitement d'une image seule\n",
+    "def prepare_image(img_path):\n",
+    "    # charge l'image en niveaux de gris, 48x48 comme dans le modèle\n",
+    "    img = image.load_img(img_path, target_size=(48, 48), color_mode=\"grayscale\")\n",
+    "    img_array = image.img_to_array(img)          # (48,48,1)\n",
+    "    img_array = img_array / 255.0                # même normalisation que rescale=1./255\n",
+    "    img_array = np.expand_dims(img_array, axis=0)  # (1,48,48,1)\n",
+    "    return img_array, img\n",
+    "\n",
+    "# Prédiction + affichage\n",
+    "def predict_emotion(img_path):\n",
+    "    x, img_display = prepare_image(img_path)\n",
+    "    preds = model.predict(x)\n",
+    "    class_index = np.argmax(preds[0])\n",
+    "    confidence = float(preds[0][class_index])\n",
+    "    emotion = label_dict[class_index]\n",
+    "\n",
+    "    # afficher l'image + résultat\n",
+    "    plt.imshow(img_display, cmap=\"gray\")\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.title(f\"Prédiction : {emotion} ({confidence*100:.2f}%)\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    print(f\"Classe prédite : {emotion}\")\n",
+    "    print(f\"Confiance : {confidence*100:.2f}%\")\n",
+    "    return emotion, confidence\n",
+    "\n",
+    "# Démo : demander une image à l'utilisateur\n",
+    "img_path = input(\"Chemin de l'image à tester : \")\n",
+    "predict_emotion(img_path)\n"
+   ]
   }
  ],
  "metadata": {
