update clean dataset

--- a/emotion-detector.ipynb
+++ b/emotion-detector.ipynb
@@ -2,25 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-11 20:38:08.870680: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-11-11 20:38:08.874181: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-11-11 20:38:08.947248: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2025-11-11 20:38:08.948322: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-11-11 20:38:10.080857: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "import pandas as pd \n",
@@ -41,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,6 +427,297 @@
    "source": [
     "model.save_weights('model_weights.h5')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "👉 Si train_propre ≥ val, tout est OK : la “surperformance” de val venait de l’augmentation/dropout sur train."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 17010 images belonging to 7 classes.\n",
+      "Found 4254 images belonging to 7 classes.\n",
+      "Train(sans aug) acc=0.493 | Val acc=0.484\n",
+      "Classes (ordre fixe): ['anger', 'disgust', 'fear', 'happy', 'neutral', 'sad', 'surprise']\n",
+      "train_eval.class_indices: {'anger': 0, 'disgust': 1, 'fear': 2, 'happy': 3, 'neutral': 4, 'sad': 5, 'surprise': 6}\n",
+      "val_eval.class_indices:   {'anger': 0, 'disgust': 1, 'fear': 2, 'happy': 3, 'neutral': 4, 'sad': 5, 'surprise': 6}\n",
+      "Classe majoritaire prédite (index): 3 = happy\n",
+      "Chevauchement train/val: 4254\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ==== 0) Constantes (adaptables) ====\n",
+    "from pathlib import Path\n",
+    "DATA_ROOT = Path(\"../dataset\")\n",
+    "TRAIN_DIR = DATA_ROOT / \"train\"\n",
+    "VAL_DIR   = DATA_ROOT / \"test\"   # ou DATA_ROOT / \"test\" si tu utilises test comme validation\n",
+    "IMG_SIZE  = 48\n",
+    "BATCH     = 64\n",
+    "COLOR_MODE = \"grayscale\"  # \"rgb\" si tu as 3 canaux\n",
+    "\n",
+    "# 👉 Définis explicitement l'ordre des classes pour être sûr\n",
+    "CLASS_ORDER = [\"anger\",\"disgust\",\"fear\",\"happy\",\"neutral\",\"sad\",\"surprise\"]\n",
+    "\n",
+    "# ==== 1) Charger LE modèle entraîné (au lieu d'un modèle réinitialisé) ====\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "\n",
+    "model = None\n",
+    "try:\n",
+    "    # Modèle complet (architecture + poids)\n",
+    "    model = keras.models.load_model(\"model_optimal.h5\", compile=False)\n",
+    "except Exception as e:\n",
+    "    print(\"Impossible de charger model_optimal.h5 :\", e)\n",
+    "    # Si tu n'as que des poids -> on reconstruit l'architecture identique puis on charge les poids\n",
+    "    from tensorflow.keras import Sequential, Input\n",
+    "    from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout, BatchNormalization\n",
+    "    from tensorflow.keras import regularizers\n",
+    "\n",
+    "    CHANNELS = 1 if COLOR_MODE == \"grayscale\" else 3\n",
+    "    def build_model(n_classes=7):\n",
+    "        return Sequential([\n",
+    "            Input(shape=(IMG_SIZE, IMG_SIZE, CHANNELS)),\n",
+    "            Conv2D(32,(3,3), padding='same', activation='relu'),\n",
+    "            Conv2D(64,(3,3), padding='same', activation='relu'),\n",
+    "            BatchNormalization(), MaxPooling2D(), Dropout(0.25),\n",
+    "\n",
+    "            Conv2D(128,(5,5), padding='same', activation='relu'),\n",
+    "            BatchNormalization(), MaxPooling2D(), Dropout(0.25),\n",
+    "\n",
+    "            Conv2D(512,(3,3), padding='same', activation='relu', kernel_regularizer=regularizers.l2(1e-4)),\n",
+    "            BatchNormalization(), MaxPooling2D(), Dropout(0.25),\n",
+    "\n",
+    "            Conv2D(512,(3,3), padding='same', activation='relu', kernel_regularizer=regularizers.l2(1e-4)),\n",
+    "            BatchNormalization(), MaxPooling2D(), Dropout(0.25),\n",
+    "\n",
+    "            Flatten(),\n",
+    "            Dense(256, activation='relu'), BatchNormalization(), Dropout(0.25),\n",
+    "            Dense(512, activation='relu'), BatchNormalization(), Dropout(0.25),\n",
+    "            Dense(7, activation='softmax')\n",
+    "        ])\n",
+    "    model = build_model(n_classes=len(CLASS_ORDER))\n",
+    "    try:\n",
+    "        model.load_weights(\"model_weights.h5\")\n",
+    "        print(\"Poids chargés depuis model_weights.h5\")\n",
+    "    except Exception as e2:\n",
+    "        raise RuntimeError(\"Aucun modèle/poids chargés. Charge model_optimal.h5 OU reconstruit et load_weights.\") from e2\n",
+    "\n",
+    "# Re-compile (nécessaire après load_model(..., compile=False))\n",
+    "model.compile(optimizer=Adam(learning_rate=1e-4),\n",
+    "              loss=\"categorical_crossentropy\",\n",
+    "              metrics=[\"accuracy\"])\n",
+    "\n",
+    "# ==== 2) Générateurs d'EVALUATION sans augmentation, avec ordre de classes FIXE ====\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "import math\n",
+    "\n",
+    "eval_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "train_eval = eval_datagen.flow_from_directory(\n",
+    "    directory=str(TRAIN_DIR),\n",
+    "    target_size=(IMG_SIZE, IMG_SIZE),\n",
+    "    batch_size=BATCH,\n",
+    "    color_mode=COLOR_MODE,\n",
+    "    class_mode=\"categorical\",\n",
+    "    shuffle=False,\n",
+    "    classes=CLASS_ORDER\n",
+    ")\n",
+    "\n",
+    "val_eval = eval_datagen.flow_from_directory(\n",
+    "    directory=str(VAL_DIR),\n",
+    "    target_size=(IMG_SIZE, IMG_SIZE),\n",
+    "    batch_size=BATCH,\n",
+    "    color_mode=COLOR_MODE,\n",
+    "    class_mode=\"categorical\",\n",
+    "    shuffle=False,\n",
+    "    classes=CLASS_ORDER\n",
+    ")\n",
+    "\n",
+    "# ==== 3) Évaluation propre (couvre 100% des images) ====\n",
+    "tr_steps = math.ceil(train_eval.samples / train_eval.batch_size)\n",
+    "va_steps = math.ceil(val_eval.samples / val_eval.batch_size)\n",
+    "\n",
+    "tr_loss, tr_acc = model.evaluate(train_eval, steps=tr_steps, verbose=0)\n",
+    "va_loss, va_acc = model.evaluate(val_eval,   steps=va_steps,   verbose=0)\n",
+    "print(f\"Train(sans aug) acc={tr_acc:.3f} | Val acc={va_acc:.3f}\")\n",
+    "\n",
+    "# ==== 4) Sanity checks utiles ====\n",
+    "# a) Vérifier l'ordre des classes\n",
+    "print(\"Classes (ordre fixe):\", CLASS_ORDER)\n",
+    "print(\"train_eval.class_indices:\", train_eval.class_indices)\n",
+    "print(\"val_eval.class_indices:  \", val_eval.class_indices)\n",
+    "\n",
+    "# b) Est-ce que le modèle prédit toujours la même classe ?\n",
+    "import numpy as np\n",
+    "preds = model.predict(val_eval, steps=va_steps, verbose=0)\n",
+    "majority = int(np.argmax(preds.mean(axis=0)))\n",
+    "print(\"Classe majoritaire prédite (index):\", majority, \"=\", CLASS_ORDER[majority])\n",
+    "\n",
+    "# c) Aucune fuite train/val ?\n",
+    "overlap = len(set(train_eval.filenames) & set(val_eval.filenames))\n",
+    "print(\"Chevauchement train/val:\", overlap)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indexation train...\n",
+      "  27473 images indexées dans train\n",
+      "Construction de la validation dédupliquée...\n",
+      "Validation nettoyée créée dans: ../dataset/test_dedup\n",
+      "  Gardées : 6610\n",
+      "  Exclues (doublons même classe) : 547\n",
+      "  Mislabeled (identique entre train/test mais étiquettes différentes) : 21\n",
+      "Dossiers de revue manuelle : ../dataset/mislabeled_review\n",
+      "Found 17010 images belonging to 7 classes.\n",
+      "Found 4109 images belonging to 7 classes.\n",
+      "[APRÈS NETTOYAGE] Train acc=0.493 | Val acc=0.484\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === Dédupliquer la validation par rapport au train (et isoler les mislabels) ===\n",
+    "from pathlib import Path\n",
+    "import hashlib, shutil\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "import math\n",
+    "\n",
+    "DATA_ROOT = Path(\"../dataset\")\n",
+    "TRAIN_DIR = DATA_ROOT / \"train\"\n",
+    "VAL_DIR   = DATA_ROOT / \"test\"        # <- mets \"val\" si tu utilises val/\n",
+    "VAL_CLEAN = DATA_ROOT / \"test_dedup\"  # <- dossier cible nettoyé\n",
+    "REVIEW    = DATA_ROOT / \"mislabeled_review\"  # pour inspection manuelle\n",
+    "\n",
+    "EXTS = {\".jpg\",\".jpeg\",\".png\",\".bmp\",\".gif\"}\n",
+    "\n",
+    "def md5(p, chunk=8192):\n",
+    "    h = hashlib.md5()\n",
+    "    with open(p, \"rb\") as f:\n",
+    "        for b in iter(lambda: f.read(chunk), b\"\"):\n",
+    "            h.update(b)\n",
+    "    return h.hexdigest()\n",
+    "\n",
+    "# 1) Indexer le train : hash -> classe\n",
+    "print(\"Indexation train...\")\n",
+    "train_hash2class = {}\n",
+    "for cls_dir in sorted(p for p in TRAIN_DIR.iterdir() if p.is_dir()):\n",
+    "    cls = cls_dir.name\n",
+    "    for p in cls_dir.rglob(\"*\"):\n",
+    "        if p.is_file() and p.suffix.lower() in EXTS:\n",
+    "            train_hash2class[md5(p)] = cls\n",
+    "print(f\"  {len(train_hash2class)} images indexées dans train\")\n",
+    "\n",
+    "# 2) Reconstruire une validation \"propre\"\n",
+    "print(\"Construction de la validation dédupliquée...\")\n",
+    "if VAL_CLEAN.exists():\n",
+    "    shutil.rmtree(VAL_CLEAN)\n",
+    "if REVIEW.exists():\n",
+    "    shutil.rmtree(REVIEW)\n",
+    "VAL_CLEAN.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "kept, dropped_dup, mislabel = 0, 0, 0\n",
+    "for cls_dir in sorted(p for p in VAL_DIR.iterdir() if p.is_dir()):\n",
+    "    val_cls = cls_dir.name\n",
+    "    for p in cls_dir.rglob(\"*\"):\n",
+    "        if not (p.is_file() and p.suffix.lower() in EXTS):\n",
+    "            continue\n",
+    "        h = md5(p)\n",
+    "        if h in train_hash2class:\n",
+    "            tr_cls = train_hash2class[h]\n",
+    "            if tr_cls == val_cls:\n",
+    "                # vrai doublon même classe : on EXCLUT de la validation (évite fuite)\n",
+    "                dropped_dup += 1\n",
+    "            else:\n",
+    "                # image identique mais étiquettes différentes -> à revoir manuellement\n",
+    "                dst = REVIEW / f\"{tr_cls}__vs__{val_cls}\" / p.name\n",
+    "                dst.parent.mkdir(parents=True, exist_ok=True)\n",
+    "                shutil.copy2(p, dst)\n",
+    "                mislabel += 1\n",
+    "        else:\n",
+    "            # image unique -> on la garde dans la val nettoyée (même étiquette)\n",
+    "            dst = VAL_CLEAN / val_cls / p.name\n",
+    "            dst.parent.mkdir(parents=True, exist_ok=True)\n",
+    "            shutil.copy2(p, dst)\n",
+    "            kept += 1\n",
+    "\n",
+    "print(f\"Validation nettoyée créée dans: {VAL_CLEAN}\")\n",
+    "print(f\"  Gardées : {kept}\")\n",
+    "print(f\"  Exclues (doublons même classe) : {dropped_dup}\")\n",
+    "print(f\"  Mislabeled (identique entre train/test mais étiquettes différentes) : {mislabel}\")\n",
+    "print(f\"Dossiers de revue manuelle : {REVIEW if mislabel>0 else 'aucun'}\")\n",
+    "\n",
+    "# 3) Réévaluer proprement sur train vs val_dedup\n",
+    "from tensorflow import keras\n",
+    "# recharge le modèle entraîné (ou garde ton 'model' actuel si déjà en mémoire)\n",
+    "try:\n",
+    "    model = keras.models.load_model(\"model_optimal.h5\", compile=False)\n",
+    "except Exception:\n",
+    "    pass  # si déjà chargé/compilé plus haut\n",
+    "\n",
+    "# déduire img_size/couleur depuis le modèle\n",
+    "H, W, C = model.input_shape[1:4]\n",
+    "IMG_SIZE = H\n",
+    "COLOR_MODE = \"grayscale\" if C == 1 else \"rgb\"\n",
+    "BATCH = 64\n",
+    "\n",
+    "# classes dans le même ordre qu'à l'entraînement\n",
+    "CLASS_ORDER = [\"anger\",\"disgust\",\"fear\",\"happy\",\"neutral\",\"sad\",\"surprise\"]\n",
+    "\n",
+    "datagen = ImageDataGenerator(rescale=1./255)\n",
+    "train_eval = datagen.flow_from_directory(\n",
+    "    str(TRAIN_DIR), target_size=(IMG_SIZE, IMG_SIZE), batch_size=BATCH,\n",
+    "    color_mode=COLOR_MODE, class_mode=\"categorical\", shuffle=False,\n",
+    "    classes=CLASS_ORDER\n",
+    ")\n",
+    "val_eval = datagen.flow_from_directory(\n",
+    "    str(VAL_CLEAN), target_size=(IMG_SIZE, IMG_SIZE), batch_size=BATCH,\n",
+    "    color_mode=COLOR_MODE, class_mode=\"categorical\", shuffle=False,\n",
+    "    classes=CLASS_ORDER\n",
+    ")\n",
+    "\n",
+    "import math\n",
+    "tr_steps = math.ceil(train_eval.samples/train_eval.batch_size)\n",
+    "va_steps = math.ceil(val_eval.samples/val_eval.batch_size)\n",
+    "\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "model.compile(optimizer=Adam(learning_rate=1e-4),\n",
+    "              loss=\"categorical_crossentropy\",\n",
+    "              metrics=[\"accuracy\"])\n",
+    "\n",
+    "tr_loss, tr_acc = model.evaluate(train_eval, steps=tr_steps, verbose=0)\n",
+    "va_loss, va_acc = model.evaluate(val_eval,   steps=va_steps, verbose=0)\n",
+    "print(f\"[APRÈS NETTOYAGE] Train acc={tr_acc:.3f} | Val acc={va_acc:.3f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
